# Recall

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
.github/workflows/: pages.yml
docs/: share.md
skills/recall/: SKILL.md
src/: cli.rs  config.rs  export.rs  import.rs  lib.rs  main.rs  semantic.rs  share.rs  skill_audit.rs  types.rs  utils.rs
src/adapters/: antigravity.rs  claude_code.rs  cline.rs  codex.rs  copilot.rs  cursor.rs  events.rs  file_scan.rs  gemini.rs  grok.rs  kiro.rs  mod.rs  opencode.rs  pi.rs
src/db/: schema.rs  search.rs  store.rs
src/embedding/: fastembed_impl.rs  mod.rs
src/tui/: app.rs  event.rs  ui.rs
tests/: eval_harness.rs  regression.rs
website/: .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml
website/app/: layout.tsx
website/app/(home)/: page.tsx
website/app/docs/[[...slug]]/: page.tsx
website/components/: release-download.tsx  search.tsx
website/content/docs/: commands.mdx  index.mdx
website/lib/: layout.shared.tsx  shared.ts  source.ts
