[package]
name = "recall"
version = "0.1.6"
edition = "2024"
license = "MIT"
description = "Unified search for AI coding sessions"
repository = "https://github.com/samzong/Recall"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
globset = "0.4"
libc = "0.2"
# Used to pre-wrap preview/viewing message bodies so scroll math is exact —
# avoids the cumulative drift our chars/width estimate produces at 1000+ msgs.
textwrap = "0.16"
uuid = { version = "1", features = ["v4"] }
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
fs2 = "0.4"

# ---- Embedding-backend deps. All optional; one of `semantic-fastembed` or
# `semantic-candle` must be enabled to build the semantic path. -------------
hf-hub = { version = "0.5", features = ["ureq"], optional = true }
tokenizers = { version = "0.22", default-features = false, optional = true }
fastembed = { version = "5.13", default-features = false, features = [
    "hf-hub-rustls-tls",
    "ort-download-binaries-rustls-tls",
], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.10", features = ["metal"], optional = true }
candle-nn = { version = "0.10", features = ["metal"], optional = true }
candle-transformers = { version = "0.10", features = ["metal"], optional = true }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { version = "0.10", optional = true }
candle-nn = { version = "0.10", optional = true }
candle-transformers = { version = "0.10", optional = true }

[features]
# Default: full build using fastembed (lightweight, ONNX, no openssl chain).
default = ["semantic-search", "semantic-fastembed"]

# `semantic-search` is a marker — turns on the queue worker, status indicator,
# `reembed` subcommand, etc. It does NOT pull any backend deps on its own.
# Pair it with exactly ONE of the impl features below.
semantic-search = []

# Backend implementations. Mutually exclusive at runtime (the cfg-selector in
# src/embedding/mod.rs picks one). If both are set, fastembed wins.
semantic-fastembed = ["dep:fastembed"]
semantic-candle = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:hf-hub",
    "dep:tokenizers",
]

# GPU acceleration for the candle backend.
cuda = [
    "semantic-candle",
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]

[profile.release]
opt-level = 3
lto = true
strip = true

[package.metadata.release]
publish = false
verify = false
push-remote = "origin"
pre-release-commit-message = "chore(release): bump to v{{version}}"
tag-message = "v{{version}}"
tag-name = "v{{version}}"
